fix table-overflow

--- a/style.css
+++ b/style.css
@@ -1,37 +1,28 @@
 html {
     background: #000;
-    padding: 1em;
+    padding: 1rem;
 }
 
 body {
-    font-family: sans-serif;
+    font-family: Hack, Consolas, 'Courier New', Courier, monospace;
     color: #ccddff;
     background: #1e1e2e;
-    padding: 0em;
-    border: 0px solid #ff0000;
-    border-radius: 10px;
-    outline: 0px solid #00ff00;
-    box-shadow: 0 0 0 0px #3333ff;
+    border-radius: 1rem;
     margin: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    max-width: 800px;
+    margin-bottom: 2rem;
+    max-width: 50rem;
 }
 
 header {
     background: transparent;
     text-align: center;
-    padding-top: 1em; padding-bottom: 1em;
-    border: 0px solid #ff0000;
-    border-radius: 10px;
-    outline: 0px solid #00ff00;
-    box-shadow: 0 0 0 0px #3333ff;
-    margin: 0;
+    padding-top: 2.1rem;
+    padding-bottom: 1.4rem;
 }
 
 header a {
-    font-size: 180%;
-    letter-spacing: 0.08em;
+    font-size: 170%;
+    letter-spacing: 0;
     color: #ccddff;
     text-align: center;
     font-weight: normal;
@@ -40,40 +31,34 @@ header a {
 
 header a:hover {
     text-shadow:
-        0 0 1px #fff,
-        0 0 1px #fff,
-        0 0 1px #fff;
+        0 0 0.1rem #fff,
+        0 0 0.2rem #fff,
+        0 0 0.3rem #fff;
     text-decoration: none;
 }
 
 nav {
     background: #363636;
-    padding: 0;
-    border: 0px solid #ff0000;
-    border-radius: 12px;
-    outline: 0px solid #00ff00;
-    box-shadow: 0 0 0 0px #3333ff;
-    margin: 16px;
-    margin-top: 0;
-    margin-left: 36px;
-    margin-right: 36px;
+    border-radius: 1rem;
+    margin: 1rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
 }
 
 nav a {
     display: inline-block;
-    color: #ccddff;
     color: #ccaa55;
     text-decoration: none;
-    padding-left: 0.1em;
-    padding-right: 0.1em;
-    margin: 0.1em;
+    padding-left: 0.1rem;
+    padding-right: 0.1rem;
+    margin: 0.1rem;
 }
 
 nav a:hover {
     color: #ffee00;
     background: #666666;
     text-decoration: underline;
-    border-radius: 12px;
+    border-radius: 1rem;
 }
 
 /* 
@@ -86,12 +71,9 @@ nav a:hover {
 
 article {
     background: #181825;
-    padding: 1.5em;
-    border: 0px solid #ff0000;
-    border-radius: 10px;
-    outline: 0px solid #00ff00;
-    box-shadow: 0 0 0 0px #3333ff;
-    margin: 16px;
+    padding: 1.5rem;
+    border-radius: 1rem;
+    margin: 1.5rem;
 }
 
 hr {
@@ -107,28 +89,37 @@ h2 {
 
 h3 {
     color: #00cc00;
-    margin-left: 8px;
-    margin-right: 8px;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
 }
 
 h4 {
     color: #009900;
-    margin-left: 16px;
-    margin-right: 16px;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 h5 {
-    margin-left: 16px;
-    margin-right: 16px;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 p {
+    font-family: Arial, Helvetica, sans-serif;
     line-height: 120%;
-    margin-left: 24px;
-    margin-right: 16px;
+    margin-left: 1.5rem;
+    margin-right: 1rem;
 }
 
-a:hover {
+a {
+    color: #6666ff;
+}
+
+a:hover,
+ul a:hover,
+ol a:hover,
+ul li a:hover,
+ol li a:hover {
     color: #ffffff;
 }
 
@@ -137,29 +128,22 @@ li a:link {
     color: #6666ff;
 }
 
-p a:visited,
-li a:visited {
-    color: #7f00ff;
-}
-
 table {
     border-collapse: collapse;
-    margin-left: 16px;
-    margin-right: 16px;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    display: block;
+    overflow-x: auto;
 }
 
 table th,
 table td {
-    padding: 6px 13px;
+    padding: 0.3rem 0.8rem;
     border: 1px solid #cccccc;
 }
 
-table {
-    border: 1px solid;
-}
-
 caption {
-    padding: 8px;
+    padding: 0.5rem;
     border: 1px solid #cccccc;
     margin-bottom: 1px;
     caption-side: top;
@@ -168,7 +152,7 @@ caption {
 ul,
 ol {
     line-height: 120%;
-    margin-left: 0px;
+    margin-left: 0;
 }
 
 
@@ -182,45 +166,46 @@ code {
 
 p code {
     display: inline;
-    padding: 4px;
+    padding: 0.2rem;
     border: 1px dashed #0eb7fa;
-    border-radius: 5px;
+    border-radius: 0.5rem;
 }
 
 pre code {
     display: block;
-    padding: 1em;
+    padding: 1rem;
     border: 1px dashed #0eb7fa;
-    border-radius: 8px;
-    margin-left: 24px;
-    margin-right: 24px;
+    border-radius: 0.5rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
 }
 
 blockquote {
     color: #f18a65;
     font-style: italic;
     box-sizing: border-box;
-    padding-left: 1.7em;
-    border-left: 4px solid orange;
+    padding-left: 1.7rem;
+    border-left: 0.25rem solid orange;
     margin-left: 0;
-    margin-bottom: 1.7em;
+    margin-bottom: 1.7rem;
 }
 
 time {
-    background: linear-gradient(0deg, #24273a , #363636 );
+    background: linear-gradient(0deg, #24273a, #363636);
     padding: 1px;
-    padding-left: 7px;
-    padding-right: 7px;
-    border-radius: 10px;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    border-radius: 1rem;
 }
 
 footer {
-    font-size: 0.9em;
+    font-size: 0.9rem;
     text-align: center;
     background: transparent;
-    padding: 0.6px;
+    padding: 1rem;
     border: 0px solid #ff0000;
     outline: 0px solid #00ff00;
+    border-radius: 1rem;
     box-shadow: 0 0 0 0px #3333ff;
     margin: 0px;
 }
